<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterSongDetails" >

    <LinearLayout
        android:id="@+id/song_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/songname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/enter_song_songname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10">
        	<requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/song_artist_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/artist_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/enter_song_artist"
            android:layout_width="196dp"
            android:layout_height="wrap_content" >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/song_tempo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tempo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_tempo_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/enter_song_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/song_timesig_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/timesig_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_timesig_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/enter_song_timesig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/no_setlists_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_key"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/enter_song_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>